--- a/index.html
+++ b/index.html
@@ -36,12 +36,14 @@
 
     <!-- cover element(this area will contain cover of the page) -->
     <section id='cover-section'>
-        <input  type="text" 
-                id='search-reg-input' 
-                class='inline' 
-                placeholder="Enter registration no here"
-                maxlength=8
-        />
+        <div id='input-container' class="inline-block">
+            <input  type="text" 
+                    id='search-reg-input' 
+                    class='inline' 
+                    placeholder="Enter registration no here"
+                    maxlength=8
+            />
+        </div>
     </section>
     <!-- cover area ends -->
 
