background transform added

--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 
     <!-- cover element(this area will contain cover of the page) -->
     <section id='cover-section'>
-        <div id='input-container' class="inline-block">
-            <input  type="text" 
-                    id='search-reg-input' 
-                    class='inline' 
-                    placeholder="Enter registration no here"
-                    maxlength=8
-            />
+        <div id='cover-section-container'>
+            <div id='input-container' class="inline-block">
+                <input  type="text" 
+                        id='search-reg-input' 
+                        class='inline' 
+                        placeholder="Enter registration no here"
+                        maxlength=8
+                />
+            </div>
         </div>
     </section>
     <!-- cover area ends -->
